--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -616,7 +616,7 @@ nav:not(.account) li a.incomplete.active .count, nav:not(.account) li a.incomple
 @media (min-width: 37.5em) {
   /* line 154, ../../sass/partials/_navigation.scss */
   nav:not(.account) li a {
-    padding: 10px 0;
+    padding: 14px 0;
   }
   /* line 157, ../../sass/partials/_navigation.scss */
   nav:not(.account) li a .fa-1x {
@@ -699,12 +699,19 @@ nav.account a:hover {
     text-transform: uppercase;
     text-decoration: none;
     text-align: center;
-    color: white;
+    color: #669dc9;
+    background: #FFFFFF;
     text-shadow: none;
+    transition: all 0.16s ease-in-out;
+  }
+  /* line 237, ../../sass/partials/_navigation.scss */
+  nav.account a:hover {
+    color: #FFFFFF;
+    background: #669dc9;
   }
 }
 @media (min-width: 48.75em) {
-  /* line 237, ../../sass/partials/_navigation.scss */
+  /* line 244, ../../sass/partials/_navigation.scss */
   nav.account a span {
     display: inline;
   }
@@ -927,28 +934,29 @@ form.auth .button.secondary {
 
 /* line 8, ../../sass/partials/_messaging.scss */
 .msg-info {
-  border-color: #316443;
-  color: #316443;
+  background: #2a7d75;
+  border-color: #0a1e1c;
+  color: white;
 }
 
-/* line 77, ../../sass/styles.scss */
+/* line 75, ../../sass/styles.scss */
 body {
   background: #FFFFFF;
 }
 @media (min-width: 37.5em) {
-  /* line 77, ../../sass/styles.scss */
+  /* line 75, ../../sass/styles.scss */
   body {
     background: #F9F9F9;
   }
 }
 
-/* line 86, ../../sass/styles.scss */
+/* line 84, ../../sass/styles.scss */
 #main {
   margin: 0 auto;
   background: #FFFFFF;
 }
 @media (min-width: 37.5em) {
-  /* line 86, ../../sass/styles.scss */
+  /* line 84, ../../sass/styles.scss */
   #main {
     width: 60%;
     margin-top: 140px;
@@ -961,16 +969,16 @@ body {
     border-radius: 2px;
     box-shadow: 0 0 1px #cfd4d5 inset, 0 3px 7px rgba(0, 0, 0, 0.4);
   }
-  /* line 98, ../../sass/styles.scss */
+  /* line 96, ../../sass/styles.scss */
   #main.auth {
     margin-top: 20px;
   }
 }
-/* line 103, ../../sass/styles.scss */
+/* line 101, ../../sass/styles.scss */
 #main header {
   position: relative;
 }
-/* line 107, ../../sass/styles.scss */
+/* line 105, ../../sass/styles.scss */
 #main .title {
   padding: 0 4%;
   font-size: 2.4em;
@@ -981,7 +989,7 @@ body {
   margin: 0 0 22px;
 }
 @media (min-width: 28em) {
-  /* line 107, ../../sass/styles.scss */
+  /* line 105, ../../sass/styles.scss */
   #main .title {
     font-size: 3.2em;
     padding-top: 75px;
@@ -989,50 +997,50 @@ body {
   }
 }
 @media (min-width: 37.5em) {
-  /* line 107, ../../sass/styles.scss */
+  /* line 105, ../../sass/styles.scss */
   #main .title {
     font-size: 3.7em;
     padding-top: 0;
     margin: 22px 0;
   }
 }
-/* line 129, ../../sass/styles.scss */
+/* line 127, ../../sass/styles.scss */
 #main nav + .title {
   padding-top: 76px;
   transition: padding 0.16s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
-/* line 133, ../../sass/styles.scss */
+/* line 131, ../../sass/styles.scss */
 .show-nav #main nav + .title {
   padding-top: 142px;
 }
 @media (min-width: 37.5em) {
-  /* line 133, ../../sass/styles.scss */
+  /* line 131, ../../sass/styles.scss */
   .show-nav #main nav + .title {
     padding-top: 0;
   }
 }
 @media (min-width: 37.5em) {
-  /* line 129, ../../sass/styles.scss */
+  /* line 127, ../../sass/styles.scss */
   #main nav + .title {
     padding-top: 0;
   }
 }
-/* line 146, ../../sass/styles.scss */
+/* line 144, ../../sass/styles.scss */
 #main .narrow {
   width: 80%;
   margin: 0 auto;
 }
 
-/* line 156, ../../sass/styles.scss */
+/* line 154, ../../sass/styles.scss */
 footer {
   padding: 20px 0 0;
   text-align: center;
 }
-/* line 160, ../../sass/styles.scss */
+/* line 158, ../../sass/styles.scss */
 footer p {
   margin: 0;
 }
-/* line 164, ../../sass/styles.scss */
+/* line 162, ../../sass/styles.scss */
 footer a {
   color: #2a7d75;
 }
